[package]
name = "tnt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
aoc_utils = { git = "https://github.com/bpshaver/advent-of-code-rust", version = "0.1.0" }
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"
trycmd = "0.14.15"
