[package]
name = "tnt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
file_lookup = { git = "https://github.com/bpshaver/file_lookup", version = "0.1.0" }
home = "0.5.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
trycmd = "0.14.16"
