[package]
name = "tnt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.10.0"
file_lookup = "0.2.0"
fuzzy-matcher = { version = "0.3.7", features = ["compact"] }
home = "0.5.4"
inquire = "0.6.1"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.95"

[dev-dependencies]
trycmd = "0.14.16"
